--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="#how-it-works">How It Works</a></li>
                     <li><a href="#success-stories">Success Stories</a></li>
+                    <li><a href="#faq">FAQ</a></li>
+                    <li><a href="#about-us">About Us</a></li>
                     <li><a href="#contact">Contact Us</a></li>
                 </ul>
             </nav>
@@ -27,7 +29,7 @@
     <section id="home" class="hero">
         <div class="container">
             <h2>Start Your Journey to Find a Perfect Partner</h2>
-            <p>Join our trusted Telugu Matrimony platform with over 20 years of experience.</p>
+            <p>Join our trusted Telugu Matrimony platform with over 20 years of experience, helping people find meaningful relationships through traditional and modern matchmaking services. Whether you're looking for friendship or marriage, we are here to guide you every step of the way.</p>
         </div>
     </section>
 
@@ -38,19 +40,19 @@
             <div class="steps">
                 <div class="step">
                     <h3>Profile Creation</h3>
-                    <p>Create your account to find a match.</p>
+                    <p>Create your account to find a match and begin your journey.</p>
                 </div>
                 <div class="step">
                     <h3>Connect</h3>
-                    <p>Connect with your perfect match.</p>
+                    <p>Browse profiles and connect with potential partners.</p>
                 </div>
                 <div class="step">
                     <h3>Initiate Communication</h3>
-                    <p>Start a conversation to take things ahead.</p>
+                    <p>Start a conversation and get to know each other.</p>
                 </div>
                 <div class="step">
                     <h3>Arranging Meetings</h3>
-                    <p>Set up an appointment to know each other.</p>
+                    <p>Set up a meeting to take things forward and find your perfect match.</p>
                 </div>
             </div>
         </div>
@@ -73,7 +75,42 @@
                     <h3>Praveen & Meghana</h3>
                     <p>"Telugu Kapu Marriage Bureau has given me tremendous help in finding my soul-mate."</p>
                 </div>
+                <div class="story">
+                    <h3>Karthik & Swetha</h3>
+                    <p>"Amarnath Reddy Matrimony helped me find my perfect match and I'm forever grateful."</p>
+                </div>
+                <div class="story">
+                    <h3>Vijay & Sneha</h3>
+                    <p>"Thanks to the professional services at Telugu Matrimony, I found my life partner."</p>
+                </div>
             </div>
+        </div>
+    </section>
+
+    <!-- FAQ Section -->
+    <section id="faq" class="faq">
+        <div class="container">
+            <h2>Frequently Asked Questions</h2>
+            <div class="faq-item">
+                <h3>Is this platform secure?</h3>
+                <p>Yes, your data is securely protected using advanced encryption techniques.</p>
+            </div>
+            <div class="faq-item">
+                <h3>How do I contact customer support?</h3>
+                <p>You can reach us through the contact details provided below or through social media.</p>
+            </div>
+            <div class="faq-item">
+                <h3>What is the success rate of the platform?</h3>
+                <p>We have successfully matched thousands of couples through our trusted services.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- About Us Section -->
+    <section id="about-us" class="about-us">
+        <div class="container">
+            <h2>About Us</h2>
+            <p>With over 20 years of experience, Amarnath Reddy Matrimony has been the leading matchmaking platform in the Telugu community. Our mission is to provide a secure, reliable, and efficient platform for people to find their life partners. Our team of experts and advanced technology ensure that your journey to find love is smooth and successful.</p>
         </div>
     </section>
 
@@ -92,7 +129,6 @@
                     <p>Phone: +91-98851-41569</p>
                     <p>Phone: +91-96425-86868</p>
                 </div>
-                <!-- Add more offices as needed -->
             </div>
             <div class="social-media">
                 <a href="https://www.facebook.com/telugumarriagebureaumatrimony/" target="_blank">Facebook</a>
@@ -108,10 +144,8 @@
             <p>&copy; 2024 Amarnath Reddy Matrimony. All rights reserved.</p>
             <div class="footer-links">
                 <a href="#about-us">About Us</a>
-                <a href="#register">Register</a>
                 <a href="#contact">Contact</a>
                 <a href="#privacy-policy">Privacy Policy</a>
-                <!-- Add more links as needed -->
             </div>
         </div>
     </footer>
