--- a/index.html
+++ b/index.html
@@ -30,8 +30,26 @@
         <div class="container">
             <h2>Start Your Journey to Find a Perfect Partner</h2>
             <p>Join our trusted Telugu Matrimony platform with over 20 years of experience, helping people find meaningful relationships through traditional and modern matchmaking services. Whether you're looking for friendship or marriage, we are here to guide you every step of the way.</p>
+            <a href="#registration" class="btn">Register Now</a>
+            <a href="#about-us" class="btn">Learn More</a>
         </div>
     </section>
+
+    <!-- Sidebar Stats -->
+    <div class="sidebar-left">
+        <h3>20,000+ Matches</h3>
+        <p>Helping people connect since 2004.</p>
+    </div>
+    <div class="sidebar-right">
+        <h3>Why Choose Us?</h3>
+        <p>Trusted by families for generations.</p>
+    </div>
+
+    <!-- Image Carousel -->
+    <div class="image-carousel">
+        <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 1">
+        <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 2">
+    </div>
 
     <!-- How It Works -->
     <section id="how-it-works" class="how-it-works">
