--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 <body>
     <!-- Header -->
     <header>
-        <div class="container">
-            <img src="logo.png" alt="Amarnath Reddy Matrimony Logo" class="logo">
-            <h1>Amarnath Reddy Matrimony</h1>
+        <div class="header-container">
+            <div class="logo-container">
+                <img src="logo.png" alt="Amarnath Reddy Matrimony Logo" class="logo">
+            </div>
+            <div class="title-container">
+                <h1>Amarnath Reddy Matrimony</h1>
+            </div>
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
