--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
                 <img src="logo.png" alt="Amarnath Reddy Matrimony Logo" class="logo">
             </div>
             <div class="title-container">
-                <h1>Amarnath Reddy Matrimony</h1>
+                <h1>Welcome to Amarnath Reddy Matrimony</h1>
+                <p class="subtitle">Trusted Telugu Matrimony Platform for Over 20 Years</p>
             </div>
             <nav>
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#how-it-works">How It Works</a></li>
                     <li><a href="#success-stories">Success Stories</a></li>
-                    <li><a href="#faq">FAQ</a></li>
+                    <li><a href="#faq">FAQ's</a></li>
                     <li><a href="#about-us">About Us</a></li>
                     <li><a href="#contact">Contact Us</a></li>
                 </ul>
