--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <!-- Header -->
     <header>
         <div class="header-container">
-            <div class="logo-container">
+            <div class="logo-title">
                 <img src="logo.png" alt="Amarnath Reddy Matrimony Logo" class="logo">
-            </div>
-            <div class="title-container">
-                <h1>Welcome to Amarnath Reddy Matrimony</h1>
-                <p class="subtitle">Trusted Telugu Matrimony Platform for Over 20 Years</p>
+                <div class="title-wrapper">
+                    <h1>Amarnath Reddy Matrimony</h1>
+                    <p class="subtitle">Trusted Telugu Matrimony Platform for Over 20 Years</p>
+                </div>
             </div>
             <nav>
                 <ul>
@@ -28,7 +28,7 @@
                 </ul>
             </nav>
         </div>
-    </header>
+    </header>    
 
     <!-- Hero Section -->
     <section id="home" class="hero">
