--- a/index.html
+++ b/index.html
@@ -7,28 +7,30 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Header -->
+    <!-- Enhanced Header -->
     <header>
         <div class="header-container">
             <div class="logo-title">
                 <img src="logo.png" alt="Amarnath Reddy Matrimony Logo" class="logo">
                 <div class="title-wrapper">
-                    <h1>Amarnath Reddy Matrimony</h1>
+                    <h1>Welcome to Amarnath Reddy Matrimony</h1>
                     <p class="subtitle">Trusted Telugu Matrimony Platform for Over 20 Years</p>
                 </div>
             </div>
-            <nav>
-                <ul>
-                    <li><a href="#home" class="smooth-scroll">Home</a></li>
-                    <li><a href="#how-it-works" class="smooth-scroll">How It Works</a></li>
-                    <li><a href="#success-stories" class="smooth-scroll">Success Stories</a></li>
-                    <li><a href="#faq" class="smooth-scroll">FAQ's</a></li>
-                    <li><a href="#about-us" class="smooth-scroll">About Us</a></li>
-                    <li><a href="#contact" class="smooth-scroll">Contact Us</a></li>
-                </ul>
-            </nav>
         </div>
-    </header>    
+    </header>
+
+    <!-- Navigation Bar -->
+    <nav>
+        <ul>
+            <li><a href="#home" class="smooth-scroll">Home</a></li>
+            <li><a href="#how-it-works" class="smooth-scroll">How It Works</a></li>
+            <li><a href="#success-stories" class="smooth-scroll">Success Stories</a></li>
+            <li><a href="#faq" class="smooth-scroll">FAQ's</a></li>
+            <li><a href="#about-us" class="smooth-scroll">About Us</a></li>
+            <li><a href="#contact" class="smooth-scroll">Contact Us</a></li>
+        </ul>
+    </nav>
 
     <!-- Hero Section -->
     <section id="home" class="hero">
