--- a/index.html
+++ b/index.html
@@ -34,23 +34,27 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
-        <div class="container">
+        <div class="hero-container">
             <h2>Start Your Journey to Find a Perfect Partner</h2>
-            <p>Join our trusted Telugu Matrimony platform with over 20 years of experience, helping people find meaningful relationships through traditional and modern matchmaking services. Whether you're looking for friendship or marriage, we are here to guide you every step of the way.</p>
-            <a href="#registration" class="btn">Register Now</a>
-            <a href="#about-us" class="btn">Learn More</a>
+            <p>
+                Join our trusted Telugu Matrimony platform with over 20 years of experience, helping people find meaningful relationships through traditional and modern matchmaking services. Whether you're looking for friendship or marriage, we are here to guide you every step of the way.
+            </p>
+            <div class="hero-buttons">
+                <a href="#registration" class="btn">Register Now</a>
+                <a href="#about-us" class="btn">Learn More</a>
+            </div>
+        </div>
+        <div class="sidebar-stats">
+            <div class="sidebar-left">
+                <h3>20,000+ Matches</h3>
+                <p>Helping people connect since 2004.</p>
+            </div>
+            <div class="sidebar-right">
+                <h3>Why Choose Us?</h3>
+                <p>Trusted by families for generations.</p>
+            </div>
         </div>
     </section>
-
-    <!-- Sidebar Stats -->
-    <div class="sidebar-left">
-        <h3>20,000+ Matches</h3>
-        <p>Helping people connect since 2004.</p>
-    </div>
-    <div class="sidebar-right">
-        <h3>Why Choose Us?</h3>
-        <p>Trusted by families for generations.</p>
-    </div>
 
     <!-- Image Carousel -->
     <div class="image-carousel">
@@ -135,7 +139,9 @@
     <section id="about-us" class="about-us">
         <div class="container">
             <h2>About Us</h2>
-            <p>With over 20 years of experience, Amarnath Reddy Matrimony has been the leading matchmaking platform in the Telugu community. Our mission is to provide a secure, reliable, and efficient platform for people to find their life partners. Our team of experts and advanced technology ensure that your journey to find love is smooth and successful.</p>
+            <p>
+                With over 20 years of experience, Amarnath Reddy Matrimony has been the leading matchmaking platform in the Telugu community. Our mission is to provide a secure, reliable, and efficient platform for people to find their life partners. Our team of experts and advanced technology ensure that your journey to find love is smooth and successful.
+            </p>
         </div>
     </section>
 
