--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 Join our trusted Telugu Matrimony platform with over 20 years of experience, helping people find meaningful relationships through traditional and modern matchmaking services. Whether you're looking for friendship or marriage, we are here to guide you every step of the way.
             </p>
             <div class="hero-buttons">
-                <a href="#registration" class="btn">Register Now</a>
+                <!-- <a href="#registration" class="btn">Register Now</a> -->
                 <a href="#about-us" class="btn">Learn More</a>
             </div>
         </div>
