--- a/index.html
+++ b/index.html
@@ -58,8 +58,12 @@
 
     <!-- Image Carousel -->
     <div class="image-carousel">
-        <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 1">
-        <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 2">
+        <div class="carousel-track">
+            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 1">
+            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 2">
+            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 3">
+            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 4">
+        </div>
     </div>
 
     <!-- How It Works -->
