--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
             <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 2">
             <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 3">
             <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 4">
+            <!-- Duplicate images for seamless looping -->
+            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 1">
+            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 2">
+            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 3">
+            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 4">
         </div>
     </div>
 
