--- a/index.html
+++ b/index.html
@@ -59,15 +59,13 @@
     <!-- Image Carousel -->
     <div class="image-carousel">
         <div class="carousel-track">
-            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 1">
-            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 2">
-            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 3">
-            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 4">
-            <!-- Duplicate images for seamless looping -->
-            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 1">
-            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 2">
-            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 3">
-            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 4">
+            <img src="pexels-asadphoto-1.jpg" alt="Happy Couple 1">
+            <img src="pexels-asadphoto-2.jpg" alt="Happy Couple 2">
+            <img src="pexels-asadphoto-3.jpg" alt="Happy Couple 3">
+            <img src="pexels-asadphoto-4.jpg" alt="Happy Couple 4">
+            <img src="pexels-asadphoto-5.jpg" alt="Happy Couple 5">
+            <img src="pexels-asadphoto-6.jpg" alt="Happy Couple 6">
+            <img src="pexels-asadphoto-7.jpg" alt="Happy Couple 7">
         </div>
     </div>
 
