--- a/index.html
+++ b/index.html
@@ -59,13 +59,20 @@
     <!-- Image Carousel -->
     <div class="image-carousel">
         <div class="carousel-track">
-            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 1">
-            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 2">
-            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 3">
-            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 4">
-            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 5">
+            <img src="pexels-asadphoto-1.jpg" alt="Happy Couple 1">
+            <img src="pexels-asadphoto-2.jpg" alt="Happy Couple 2">
+            <img src="pexels-asadphoto-3.jpg" alt="Happy Couple 3">
+            <img src="pexels-asadphoto-4.jpg" alt="Happy Couple 4">
+            <img src="pexels-asadphoto-5.jpg" alt="Happy Couple 5">
+            <!-- Duplicate images for smooth infinite effect -->
+            <img src="pexels-asadphoto-1.jpg" alt="Happy Couple 1">
+            <img src="pexels-asadphoto-2.jpg" alt="Happy Couple 2">
+            <img src="pexels-asadphoto-3.jpg" alt="Happy Couple 3">
+            <img src="pexels-asadphoto-4.jpg" alt="Happy Couple 4">
+            <img src="pexels-asadphoto-5.jpg" alt="Happy Couple 5">
         </div>
     </div>
+
 
     <!-- How It Works -->
     <section id="how-it-works" class="how-it-works">
