--- a/index.html
+++ b/index.html
@@ -80,18 +80,22 @@
             <h2>How It Works</h2>
             <div class="steps">
                 <div class="step">
+                    <img src="icon1.png" alt="Profile Creation" class="step-icon">
                     <h3>Profile Creation</h3>
                     <p>Create your account to find a match and begin your journey.</p>
                 </div>
                 <div class="step">
+                    <img src="icon2.png" alt="Connect" class="step-icon">
                     <h3>Connect</h3>
                     <p>Browse profiles and connect with potential partners.</p>
                 </div>
                 <div class="step">
+                    <img src="icon3.png" alt="Initiate Communication" class="step-icon">
                     <h3>Initiate Communication</h3>
                     <p>Start a conversation and get to know each other.</p>
                 </div>
                 <div class="step">
+                    <img src="icon4.png" alt="Arranging Meetings" class="step-icon">
                     <h3>Arranging Meetings</h3>
                     <p>Set up a meeting to take things forward and find your perfect match.</p>
                 </div>
