--- a/index.html
+++ b/index.html
@@ -74,34 +74,33 @@
     </div>
 
 
-    <!-- How It Works -->
     <section id="how-it-works" class="how-it-works">
         <div class="container">
             <h2>How It Works</h2>
             <div class="steps">
                 <div class="step">
-                    <img src="icon1.png" alt="Profile Creation" class="step-icon">
+                    <img src="icons/profile-creation.svg" alt="Profile Creation Icon" class="step-icon">
                     <h3>Profile Creation</h3>
                     <p>Create your account to find a match and begin your journey.</p>
                 </div>
                 <div class="step">
-                    <img src="icon2.png" alt="Connect" class="step-icon">
+                    <img src="icons/connect.svg" alt="Connect Icon" class="step-icon">
                     <h3>Connect</h3>
                     <p>Browse profiles and connect with potential partners.</p>
                 </div>
                 <div class="step">
-                    <img src="icon3.png" alt="Initiate Communication" class="step-icon">
+                    <img src="icons/communication.svg" alt="Initiate Communication Icon" class="step-icon">
                     <h3>Initiate Communication</h3>
                     <p>Start a conversation and get to know each other.</p>
                 </div>
                 <div class="step">
-                    <img src="icon4.png" alt="Arranging Meetings" class="step-icon">
+                    <img src="icons/meetings.svg" alt="Arranging Meetings Icon" class="step-icon">
                     <h3>Arranging Meetings</h3>
                     <p>Set up a meeting to take things forward and find your perfect match.</p>
                 </div>
             </div>
         </div>
-    </section>
+    </section>    
 
     <!-- Success Stories -->
     <section id="success-stories" class="success-stories">
