--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
         </div>
     </div>
 
-
+    <!-- How It Works -->
     <section id="how-it-works" class="how-it-works">
         <div class="container">
             <h2>How It Works</h2>
             <div class="steps">
                 <div class="step">
-                    <img src="icons/profile-creation.svg" alt="Profile Creation Icon" class="step-icon">
+                    <img src="icons/profile_creation.svg" alt="Profile Creation Icon" class="step-icon">
                     <h3>Profile Creation</h3>
                     <p>Create your account to find a match and begin your journey.</p>
                 </div>
