--- a/index.html
+++ b/index.html
@@ -106,24 +106,32 @@
     <section id="success-stories" class="success-stories">
         <div class="container">
             <h2>Success Stories</h2>
+            <p class="intro-text">
+                Hear from happy couples who found their soulmates with the help of Amarnath Reddy Matrimony.
+            </p>
             <div class="stories">
                 <div class="story">
+                    <img src="images/siva_silpa.jpg" alt="Siva & Silpa" class="story-image">
                     <h3>Siva & Silpa</h3>
                     <p>"We are made for each other. Thanks to Telugu Kamma Marriage Bureau for connecting us."</p>
                 </div>
                 <div class="story">
+                    <img src="images/bharath_haritha.jpg" alt="Bharath & Haritha" class="story-image">
                     <h3>Bharath & Haritha</h3>
                     <p>"He is my perfect life partner with the same hobbies. I am really happy with him. Thanks to Telugu Reddy Marriage Bureau."</p>
                 </div>
                 <div class="story">
+                    <img src="images/praveen_meghana.jpg" alt="Praveen & Meghana" class="story-image">
                     <h3>Praveen & Meghana</h3>
-                    <p>"Telugu Kapu Marriage Bureau has given me tremendous help in finding my soul-mate."</p>
+                    <p>"Telugu Kapu Marriage Bureau has given me tremendous help in finding my soulmate."</p>
                 </div>
                 <div class="story">
+                    <img src="images/karthik_swetha.jpg" alt="Karthik & Swetha" class="story-image">
                     <h3>Karthik & Swetha</h3>
                     <p>"Amarnath Reddy Matrimony helped me find my perfect match and I'm forever grateful."</p>
                 </div>
                 <div class="story">
+                    <img src="images/vijay_sneha.jpg" alt="Vijay & Sneha" class="story-image">
                     <h3>Vijay & Sneha</h3>
                     <p>"Thanks to the professional services at Telugu Matrimony, I found my life partner."</p>
                 </div>
