--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><a href="#how-it-works" class="smooth-scroll">How It Works</a></li>
             <li><a href="#success-stories" class="smooth-scroll">Success Stories</a></li>
             <li><a href="#faq" class="smooth-scroll">FAQ's</a></li>
-            <li><a href="#about-us" class="smooth-scroll">About Us</a></li>
+            <li><a href="#about-us" class="smooth-scroll">Mission & Vision</a></li>
             <li><a href="#contact" class="smooth-scroll">Contact Us</a></li>
         </ul>
     </nav>
