--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><a href="#how-it-works" class="smooth-scroll">How It Works</a></li>
             <li><a href="#success-stories" class="smooth-scroll">Success Stories</a></li>
             <li><a href="#faq" class="smooth-scroll">FAQ's</a></li>
-            <li><a href="#about-us" class="smooth-scroll">Our Mission & Vision</a></li>
+            <li><a href="#about-us" class="smooth-scroll">Mission & Vision</a></li>
             <li><a href="#contact" class="smooth-scroll">Contact Us</a></li>
         </ul>
     </nav>
@@ -229,7 +229,7 @@
         <div class="container">
             <p>&copy; 2024 Amarnath Reddy Matrimony. All rights reserved.</p>
             <div class="footer-links">
-                <a href="#about-us" class="smooth-scroll">About Us</a>
+                <a href="#about-us" class="smooth-scroll">Mission & Vision</a>
                 <a href="#contact" class="smooth-scroll">Contact</a>
                 <a href="#privacy-policy">Privacy Policy</a>
             </div>
