--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Amarnath Reddy Matrimony</title>
     <!-- Add Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <!-- Add Telugu Caption Metadata -->
+    <meta name="description" content="గమనిక: పరిచయం మా వంతు - పార్శిలనా మే వంతు - తుదినిర్ణయం కూడా మే వంతు!">
     <!-- Link to CSS -->
     <link rel="stylesheet" href="styles.css">
 </head>
