--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <h3>Connect with us</h3>
                 <a href="https://www.facebook.com/telugumarriagebureaumatrimony/" target="_blank">Facebook</a>
                 <a href="https://www.instagram.com/telugumarriagebureau/" target="_blank">Instagram</a>
-                <a href="https://twitter.com/telugu_bureau" target="_blank">Twitter</a>
+                <!-- <a href="https://twitter.com/telugu_bureau" target="_blank">Twitter</a> -->
             </div>
         </div>
     </section>
