--- a/index.html
+++ b/index.html
@@ -29,18 +29,13 @@
     <!-- Navigation Bar -->
     <nav>
         <ul>
-            <li><a href="#home" class="smooth-scroll">Home</a></li>
-            <li><a href="#how-it-works" class="smooth-scroll">How It Works</a></li>
-            <li><a href="#success-stories" class="smooth-scroll">Success Stories</a></li>
-            <li><a href="#faq" class="smooth-scroll">FAQ's</a></li>
-            <li><a href="#mission-vision" class="smooth-scroll">Mission & Vision</a></li>
-            <li><a href="#contact" class="smooth-scroll">Contact Us</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#how-it-works">How It Works</a></li>
+            <li><a href="#success-stories">Success Stories</a></li>
+            <li><a href="#faqs">FAQ's</a></li>
+            <li><a href="#mission-vision">Mission & Vision</a></li>
+            <li><a href="#contact-us">Contact Us</a></li>
         </ul>
-        <div class="hamburger-menu" onclick="toggleMenu()">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
     </nav>
 
     <!-- Hero Section -->
