--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     </section>
 
     <!-- FAQ Section -->
-    <section id="faq" class="faq">
+    <section id="faqs" class="faq">
         <div class="container">
             <h2>Frequently Asked Questions</h2>
             <div class="faq-items">
@@ -202,7 +202,7 @@
     </section>
 
     <!-- Contact Us Section -->
-    <section id="contact" class="contact">
+    <section id="contact-us" class="contact">
         <div class="container">
             <h2>Contact Us</h2>
             <p class="intro-text">We are here to assist you with any questions or concerns. Feel free to reach out to us!</p>
