--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@
     <!-- Image Carousel -->
     <div class="image-carousel">
         <div class="carousel-track">
-            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 1">
-            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 2">
-            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 3">
-            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 4">
-            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 5">
+            <img src="images/pexels-asadphoto-1024960.jpg" alt="Happy Couple 1">
+            <img src="images/pexels-asadphoto-1024960.jpg" alt="Happy Couple 2">
+            <img src="images/pexels-asadphoto-1024960.jpg" alt="Happy Couple 3">
+            <img src="images/pexels-asadphoto-1024960.jpg" alt="Happy Couple 4">
+            <img src="images/pexels-asadphoto-1024960.jpg" alt="Happy Couple 5">
             <!-- Duplicate images for smooth infinite effect -->
-            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 1">
-            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 2">
-            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 3">
-            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 4">
-            <img src="pexels-asadphoto-1024960.jpg" alt="Happy Couple 5">
+            <img src="images/pexels-asadphoto-1024960.jpg" alt="Happy Couple 1">
+            <img src="images/pexels-asadphoto-1024960.jpg" alt="Happy Couple 2">
+            <img src="images/pexels-asadphoto-1024960.jpg" alt="Happy Couple 3">
+            <img src="images/pexels-asadphoto-1024960.jpg" alt="Happy Couple 4">
+            <img src="images/pexels-asadphoto-1024960.jpg" alt="Happy Couple 5">
         </div>
     </div>
 
@@ -85,22 +85,22 @@
             <h2>How It Works</h2>
             <div class="steps">
                 <div class="step">
-                    <img src="icons/profile_creation.svg" alt="Profile Creation Icon" class="step-icon">
+                    <img src="icons/profile_creation.png" alt="Profile Creation Icon" class="step-icon">
                     <h3>Profile Creation</h3>
                     <p>Create your account to find a match and begin your journey.</p>
                 </div>
                 <div class="step">
-                    <img src="icons/connect.svg" alt="Connect Icon" class="step-icon">
+                    <img src="icons/connect.png" alt="Connect Icon" class="step-icon">
                     <h3>Connect</h3>
                     <p>Browse profiles and connect with potential partners.</p>
                 </div>
                 <div class="step">
-                    <img src="icons/communication.svg" alt="Initiate Communication Icon" class="step-icon">
+                    <img src="icons/communication.png" alt="Initiate Communication Icon" class="step-icon">
                     <h3>Initiate Communication</h3>
                     <p>Start a conversation and get to know each other.</p>
                 </div>
                 <div class="step">
-                    <img src="icons/meetings.svg" alt="Arranging Meetings Icon" class="step-icon">
+                    <img src="icons/meetings.png" alt="Arranging Meetings Icon" class="step-icon">
                     <h3>Arranging Meetings</h3>
                     <p>Set up a meeting to take things forward and find your perfect match.</p>
                 </div>
