--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@
     <!-- Image Carousel -->
     <div class="image-carousel">
         <div class="carousel-track">
-            <img src="images/pexels-asadphoto-1024960.jpg" alt="Happy Couple 1">
-            <img src="images/pexels-asadphoto-1024960.jpg" alt="Happy Couple 2">
-            <img src="images/pexels-asadphoto-1024960.jpg" alt="Happy Couple 3">
-            <img src="images/pexels-asadphoto-1024960.jpg" alt="Happy Couple 4">
-            <img src="images/pexels-asadphoto-1024960.jpg" alt="Happy Couple 5">
+            <img src="images/1.jpg" alt="Happy Couple 1">
+            <img src="images/2.jpg" alt="Happy Couple 2">
+            <img src="images/3.jpg" alt="Happy Couple 3">
+            <img src="images/4.jpg" alt="Happy Couple 4">
+            <img src="images/5.jpg" alt="Happy Couple 5">
             <!-- Duplicate images for smooth infinite effect -->
-            <img src="images/pexels-asadphoto-1024960.jpg" alt="Happy Couple 1">
-            <img src="images/pexels-asadphoto-1024960.jpg" alt="Happy Couple 2">
-            <img src="images/pexels-asadphoto-1024960.jpg" alt="Happy Couple 3">
-            <img src="images/pexels-asadphoto-1024960.jpg" alt="Happy Couple 4">
-            <img src="images/pexels-asadphoto-1024960.jpg" alt="Happy Couple 5">
+            <img src="images/1.jpg" alt="Happy Couple 1">
+            <img src="images/2.jpg" alt="Happy Couple 2">
+            <img src="images/3.jpg" alt="Happy Couple 3">
+            <img src="images/4.jpg" alt="Happy Couple 4">
+            <img src="images/5.jpg" alt="Happy Couple 5">
         </div>
     </div>
 
