--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
             <img src="images/4.jpg" alt="Happy Couple 4">
             <img src="images/5.jpg" alt="Happy Couple 5">
             <!-- Duplicate images for smooth infinite effect -->
-            <img src="images/1.jpg" alt="Happy Couple 1">
-            <img src="images/2.jpg" alt="Happy Couple 2">
+            <img src="images/1.jpeg" alt="Happy Couple 1">
+            <img src="images/2.jpeg" alt="Happy Couple 2">
             <img src="images/3.jpg" alt="Happy Couple 3">
             <img src="images/4.jpg" alt="Happy Couple 4">
             <img src="images/5.jpg" alt="Happy Couple 5">
