--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </p>
             <div class="hero-buttons">
                 <!-- <a href="#registration" class="btn">Register Now</a> -->
-                <a href="#about-us" class="btn">Learn More</a>
+                <a href="#contact-us" class="btn">Learn More</a>
             </div>
         </div>
         <div class="sidebar-stats">
