--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="title-wrapper">
                     <h1>Welcome to Amarnath Reddy Matrimony</h1>
                     <p class="subtitle">Trusted Telugu Matrimony Platform for Over 20 Years</p>
-                    <h2 class="telugu-caption">గమనిక: పరిచయం మా వంతు - పార్శిలనా మే వంతు - తుదినిర్ణయం కూడా మే వంతు!</h2>
+                    <h2 class="telugu-caption">Note: We facilitate the introduction - You take charge of the conversation - The first interaction is your responsibility too!</h2>
                 </div>
             </div>
         </div>
