--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
             </div>
             <div class="social-media">
                 <h3>Connect with us</h3>
-                <a href="https://www.facebook.com/telugumarriagebureaumatrimony/" target="_blank">Facebook</a>
-                <a href="https://www.instagram.com/telugumarriagebureau/" target="_blank">Instagram</a>
+                <a href="https://www.facebook/telugumarriagebureaumatrimony/" target="_blank">Facebook</a>
+                <a href="https://www.instagram/telugumarriagebureau/" target="_blank">Instagram</a>
                 <!-- <a href="https://twitter.com/telugu_bureau" target="_blank">Twitter</a> -->
             </div>
         </div>
