--- a/index.html
+++ b/index.html
@@ -209,15 +209,9 @@
             <div class="contact-info">
                 <div class="office">
                     <h3>Hyderabad</h3>
-                    <p>Phone: +91-98851-41563</p>
-                    <p>Phone: +91-97012-65697</p>
-                    <p>Email: support@hyderabad.amarnathmatrimony.com</p>
-                </div>
-                <div class="office">
-                    <h3>Guntur</h3>
-                    <p>Phone: +91-98851-41569</p>
-                    <p>Phone: +91-96425-86868</p>
-                    <p>Email: support@guntur.amarnathmatrimony.com</p>
+                    <p>Phone: +91-9848379980</p>
+                    <p>WhatsApp: +91-9848379980</p>
+                    <p>Email: ayarramradhika@gmail.com</p>
                 </div>
             </div>
             <div class="social-media">
